--- a/first.html
+++ b/first.html
@@ -9,10 +9,12 @@
             background-color: blue;
         }
     </style>
+    <!-- Это встроенные стили CSS, применяются ко всем тегам "p" -->
 </head>
 <body>
 
     <p style="color: blue; background-color: green;">Текстовый текст</p>
+    <!-- Так выглядят инлайн стили CSS, применяются к конкретной строке -->
     <p>Текстовый текст</p>
     <p>Текстовый текст</p>
 
